fix: import modal spacing

--- a/styles/Picker.module.css
+++ b/styles/Picker.module.css
@@ -150,17 +150,18 @@
   }
   
   .fileInput {
-    margin-top: 10px;
+    margin: 10px;
     background-color: #f9f9f9;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    width: 100%;
+    width: 70%;
     color: #333;
     font-size: 16px;
   }
   
   .filePreview {
+    margin: 10px;
     margin-top: 10px;
     background-color: #f4f4f4;
     padding: 10px;
